@@ -9,6 +9,8 @@ software-store (0.3.6.2) UNRELEASED; urgency=low
   * fix crash when clicking "Install" (LP: #432645)
   * add border around navigation pane (LP: #433520)
   * do not raise if entering the password takes too long (LP: #432704)
+  * softwarestore/view/appview.py:
+    - fix bug in on_iter_nth_child()
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 18 Sep 2009 20:34:02 +0200
 
